fixed sidebar note extending correctly on overflow

--- a/src/style/Sidebar.css
+++ b/src/style/Sidebar.css
@@ -3,11 +3,11 @@
   grid-row: 2 / 4;
   grid-column: 1;
   background-color: #4BA3C3;
-  height: 100vh;
-  grid-template: 0.10fr 0.5fr / 0.5fr;
+  height: 100%;
+  grid-template: 0.1fr 0.5fr / 0.5fr;
   flex-flow: column wrap;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   justify-items: center;
   overflow-x: hidden;
   overflow-y: scroll;
